src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>BSC Sales Process</fullName>
        <description>Standard Sales Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Booking Received</fullName>
        </values>
        <values>
            <fullName>Credited</fullName>
        </values>
        <values>
            <fullName>Customer Approved</fullName>
        </values>
        <values>
            <fullName>Invoiced</fullName>
        </values>
        <values>
            <fullName>Lost</fullName>
        </values>
        <values>
            <fullName>Negotiation</fullName>
        </values>
        <values>
            <fullName>Online - Paid</fullName>
        </values>
        <values>
            <fullName>Online - Payment Failed</fullName>
        </values>
        <values>
            <fullName>Online - Pending</fullName>
        </values>
        <values>
            <fullName>Part Invoiced</fullName>
        </values>
        <values>
            <fullName>Preparation</fullName>
        </values>
        <values>
            <fullName>Qualifying</fullName>
        </values>
        <values>
            <fullName>Quote%2FProposal</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Accident_Investigation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Copied from the Lead Page for STP Course</description>
        <inlineHelpText>Copied from the Lead Page for STP Course</inlineHelpText>
        <label>Accident Investigation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Accident_Reduction__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Copied from the Lead Page for STP Course</description>
        <inlineHelpText>Copied from the Lead Page for STP Course</inlineHelpText>
        <label>Accident Reduction</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Accident_Reporting__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Copied from the Lead Page for STP Course</description>
        <inlineHelpText>Copied from the Lead Page for STP Course</inlineHelpText>
        <label>Accident Reporting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Owner_Name__c</fullName>
        <description>Used to pull information into drawloop documents (not on page layouts)</description>
        <formula>Account.Owner.FirstName&amp;&quot; &quot;&amp;Account.Owner.LastName</formula>
        <inlineHelpText>Used to pull information into drawloop documents (not on page layouts)</inlineHelpText>
        <label>Account Owner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Requires_PO__c</fullName>
        <description>Pulls PO Number always required on orders from account</description>
        <formula>Account.PO_Number_always_required_on_orders__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Pulls PO Number always required on orders from account</inlineHelpText>
        <label>Account Requires PO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Advisory_Service_Requirements__c</fullName>
        <description>Enter details of other services used on separate lines</description>
        <inlineHelpText>If an advisory service, clearly state exact requirments of service</inlineHelpText>
        <label>Advisory Service Requirements</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>All_Keywords__c</fullName>
        <inlineHelpText>All keywords used by the user while using the site (over time)</inlineHelpText>
        <label>All Keywords</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assessment_Product_Email_Required__c</fullName>
        <description>This product requires an email to be sent when bought online to instruct purchaser on accessing the service</description>
        <inlineHelpText>This product requires an email to be sent when bought online to instruct purchaser on accessing the service</inlineHelpText>
        <label>Assessment Product Email Required</label>
        <summaryFilterItems>
            <field>OpportunityLineItem.Assessment_Product_Email_Required_c__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Assessment_Product_Email_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked by DDP, this denotes an email has been sent to prevent it being resent automatically</description>
        <inlineHelpText>Checked by DDP, this denotes an email has been sent to prevent it being resent automatically</inlineHelpText>
        <label>Assessment Product Email Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Authorised_At__c</fullName>
        <label>Authorised At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Authorised_By__c</fullName>
        <label>Authorised By</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Authorised_Position__c</fullName>
        <label>Authorised Position</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Auto_Delivery_Method__c</fullName>
        <description>Overrides the Delivery method on the Account for a Opportunity</description>
        <inlineHelpText>If you do not wish to auto deliver (print or email) credit notes or invoices for this opportunity set this field to &quot;Do Not Deliver&quot;</inlineHelpText>
        <label>Override Auto Delivery Method</label>
        <picklist>
            <picklistValues>
                <fullName>Do Not Deliver</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Available_For_Invoice__c</fullName>
        <description>If latest Invoice in Blank or latest invoice is populated but credited the opp can be invoiced</description>
        <formula>IF( 
   OR(
       ISBLANK(Latest_Invoice__c),
       Latest_Invoice__r.Is_Credited_In_Full__c = true,
       AND(
           TEXT(Latest_Invoice__r.c2g__InvoiceStatus__c) = &apos;Discarded&apos;,
           TEXT( Latest_Invoice__r.c2g__InvoiceStatus__c) &lt;&gt; &apos;In Progress&apos;,
           TEXT( Latest_Invoice__r.c2g__InvoiceStatus__c) &lt;&gt; &apos;Complete&apos;
       )
   ),
   TRUE, 
   FALSE
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Available For Invoice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Award__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Enter Award that the Opportunity relates to.</description>
        <inlineHelpText>Enter Award that the Opportunity relates to.</inlineHelpText>
        <label>Award</label>
        <referenceTo>Award__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Billing_Address_Account_Name__c</fullName>
        <label>Billing Address Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Address_Building__c</fullName>
        <label>Billing Address Building</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Area__c</fullName>
        <label>Billing Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_City__c</fullName>
        <label>Billing City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Country__c</fullName>
        <label>Billing Country</label>
        <picklist>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Åland Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Samoa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anguilla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antarctica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antigua and Barbuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aruba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia, Plurinational State of</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia and Herzegovina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bouvet Island</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Billing_PostalCode__c</fullName>
        <label>Billing PostalCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_State__c</fullName>
        <label>Billing State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Street__c</fullName>
        <label>Billing Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Booking_form_notes__c</fullName>
        <inlineHelpText>This field is displayed on the customer booking form and can be used for additional comments.</inlineHelpText>
        <label>Booking form notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Bypass_Opp_Controls__c</fullName>
        <defaultValue>false</defaultValue>
        <description>use this field to bypass checks done by opp controls so opps can be set to various stages otherwise not allowed by opp control</description>
        <label>Bypass Opp Controls</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CB_Campaign_Source_Code__c</fullName>
        <label>CB Campaign Source Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CV2__c</fullName>
        <inlineHelpText>The 3 digit CV2 code on the back of the credit/debit card or in the case of AMEX the 4 digit non-embossed number on the front of the card.</inlineHelpText>
        <label>CV2</label>
        <length>4</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Card_Holder_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>When a Credit Card number has been entered, we require a contact for the card holder.</description>
        <inlineHelpText>When a Credit Card number has been entered, we require a contact for the card holder.</inlineHelpText>
        <label>Card Holder Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Card Holder Contact)</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Card_Number__c</fullName>
        <inlineHelpText>The credit/debit card number for the transaction. This is an encrypted field and cannot to viewed after submission.</inlineHelpText>
        <label>Card Number</label>
        <length>16</length>
        <maskChar>asterisk</maskChar>
        <maskType>creditCard</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Card_Payment_Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If the card payment has been processed this checkbox is true.</inlineHelpText>
        <label>Card Payment Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Card_Type__c</fullName>
        <inlineHelpText>The Credit/Debit card being used</inlineHelpText>
        <label>Card Type</label>
        <picklist>
            <picklistValues>
                <fullName>VISA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mastercard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMEX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maestro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Switch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Centre_Approval_Status__c</fullName>
        <description>Approved Centre Approval Status pulled from account</description>
        <formula>TEXT(Account.Centre_Approval_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Approved Centre Approval Status pulled from account</inlineHelpText>
        <label>Centre Approval Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chemical_Safety__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Copied from the Lead Page for STP Course</description>
        <inlineHelpText>Copied from the Lead Page for STP Course</inlineHelpText>
        <label>Chemical Safety</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Commission_Rate__c</fullName>
        <description>Holds commission rate for this opportunity as a percentage</description>
        <inlineHelpText>Holds commission rate for this opportunity as a percentage</inlineHelpText>
        <label>Commission Rate</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Communication_Motivation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Copied from the Lead Page for STP Course</description>
        <inlineHelpText>Copied from the Lead Page for STP Course</inlineHelpText>
        <label>Communication and Motivation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Course_Materials_Dispatched_by_Logistics__c</fullName>
        <defaultValue>false</defaultValue>
        <description>on request by Cat case : 00006385</description>
        <inlineHelpText>Check this if the course materials are sent to the Client</inlineHelpText>
        <label>Course Materials Dispatched by Logistics</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Course_Start_Date__c</fullName>
        <description>Copied from Lead - The start date of the course the user wishes to book for</description>
        <inlineHelpText>Copied from Lead - The start date of the course the user wishes to book for</inlineHelpText>
        <label>Course Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Course_Title__c</fullName>
        <description>Copied from Lead - The title of the course the user wishes to book.</description>
        <inlineHelpText>Copied from Lead - The title of the course the user wishes to book.</inlineHelpText>
        <label>Course Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Venue__c</fullName>
        <description>Copied from Lead - The venue of the course which the customer wishes to book</description>
        <inlineHelpText>Copied from Lead - The venue of the course which the customer wishes to book</inlineHelpText>
        <label>Course Venue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Coursebooker_Invoice_Number__c</fullName>
        <description>Input the Invoice number from coursebooker when not invoiced from Salesforce</description>
        <inlineHelpText>Input the Invoice number from coursebooker when not invoiced from Salesforce</inlineHelpText>
        <label>Coursebooker Invoice Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Create_Invoice__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked opportunity is added into the queue to create an invoice for (currently only used for complywise invoices)</inlineHelpText>
        <label>Create Invoice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Credit_Approval_Notes__c</fullName>
        <description>Allows user to enter notes explaining request for credit</description>
        <inlineHelpText>Please explain why you are requesting a credit for the invoice associated to this opportunity</inlineHelpText>
        <label>Credit Approval Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Credit_Card_Amount__c</fullName>
        <description>Customer agreed value to be taken from credit card</description>
        <inlineHelpText>Enter amount customer has agreed to be debited from credit card</inlineHelpText>
        <label>Credit Card Amount</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Credit_Card_Email__c</fullName>
        <description>Hold email address of credit card fields
Name updated as requested by finance (case: 5233)</description>
        <inlineHelpText>Insert the email address where the card receipt should be sent to</inlineHelpText>
        <label>Email Address for Receipt</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Credit_Card_Notes__c</fullName>
        <description>Holds notes on credit card transactions</description>
        <inlineHelpText>Enter notes associated with credit card transactions</inlineHelpText>
        <label>Credit Card Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Credit_Note_Product_Group__c</fullName>
        <description>Holds product group associated with credit note</description>
        <inlineHelpText>Select product group for product(s) associated to this credit note</inlineHelpText>
        <label>Credit Note Product Group</label>
        <picklist>
            <picklistValues>
                <fullName>Advertising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Audit and Consultancy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distance Learning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E-Learning LMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E-Learning Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Events &amp; Awards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In-Co Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JOMC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Memberships Subs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NVQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Penalty Fee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Publications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quals Approved Centre Subs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quals - Assessments</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Credit_Note_Reason__c</fullName>
        <description>Select reason for the creation of this credit note</description>
        <inlineHelpText>Reason for creation of credit note</inlineHelpText>
        <label>Credit Note Reason</label>
        <picklist>
            <picklistValues>
                <fullName>BSC Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BSC Transfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Transfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicated Opp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Error on opp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invoiced too early</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invoicing Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subs product change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Credit_Note_Sent_To_Client__c</fullName>
        <description>Would you like the credit note to be sent to the client?</description>
        <inlineHelpText>Would you like the credit note to be sent to the client?</inlineHelpText>
        <label>Credit Note To Be Sent To Client</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Credit_note_Reason_Other_Information__c</fullName>
        <description>Credit note Reason Other Information</description>
        <inlineHelpText>Credit note Reason Other Information</inlineHelpText>
        <label>Credit note Reason Other Information</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Credited_Total__c</fullName>
        <label>Credited Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Organisational_Issues__c</fullName>
        <inlineHelpText>Are there any current issues which are driving the training?</inlineHelpText>
        <label>Current Organisational Issues</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Approved_Date__c</fullName>
        <description>Date Stamp of the date/time the opportunity was set to Customer Approved</description>
        <inlineHelpText>Date Stamp of the date/time the opportunity was set to Customer Approved</inlineHelpText>
        <label>Customer Approved Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Customer_Service_Order_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customer Service Order Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Service_notes__c</fullName>
        <label>Customer Service notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DMS_Cost__c</fullName>
        <inlineHelpText>Rolls up DMS Cost for Calculation of Audit+</inlineHelpText>
        <label>DMS Cost</label>
        <summarizedField>OpportunityLineItem.UnitPrice</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.DMS_Product__c</field>
            <operation>equals</operation>
            <value>TRUE</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,&quot;All Opportunity Details Captured&quot;, &quot;Missing: &quot;&amp;IF( ISPICKVAL( Type ,&quot;&quot;),&quot;Type, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(LEN( TEXT(MONTH(CloseDate))) = 0, &quot;Close Date, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( Amount &lt;= 0, &quot;Amount, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL( LeadSource,&quot;&quot;), &quot;Lead Source, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(NextStep)=0, &quot;Next Steps&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF( ISPICKVAL(Type,&quot;&quot;), 0,20) + IF( LEN( TEXT(MONTH(CloseDate))) = 0, 0,20) + IF( Amount &lt;= 0, 0,20) + IF( ISPICKVAL( LeadSource,&quot;&quot;), 0,20) + IF( LEN(NextStep)=0, 0,20)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_to_be_Invoiced__c</fullName>
        <inlineHelpText>The data on which this opportunity should be invoiced.</inlineHelpText>
        <label>Date to be Invoiced</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Decision_Making_Process__c</fullName>
        <label>Decision Making Process</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Description_of_Audit_Site__c</fullName>
        <inlineHelpText>Give a brief description of site to be audited, inc no. of buildings</inlineHelpText>
        <label>Description of Audit Site</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Disable_re_assignment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Disables the automatic assignment of this opportunity to the account owner</description>
        <inlineHelpText>Check to override the automatic assignment of this opportunity to the account owner</inlineHelpText>
        <label>Disable re-assignment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Discounted_Products__c</fullName>
        <label>Discounted Products</label>
        <summaryFilterItems>
            <field>OpportunityLineItem.Discounted__c</field>
            <operation>equals</operation>
            <value>TRUE</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Display_Screen_Equipment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Copied from the Lead Page for STP Course</description>
        <inlineHelpText>Copied from the Lead Page for STP Course</inlineHelpText>
        <label>Display Screen Equipment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_Not_Auto_Post_SIN_SCR__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Auto Post Invoice and Credit notes.</description>
        <inlineHelpText>Auto Post Invoice and Credit notes.</inlineHelpText>
        <label>Do Not Auto Post Invoice &amp; Credit Note</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Drawloop_Next_Assessment_Product_Email__c</fullName>
        <description>Used by Drawloop Package &quot;Email guidance for short written answer assessments&quot; to automate sending email</description>
        <formula>&quot;SFOpportunity:&quot; &amp; Id &amp; &quot;;SFcontact:003L000000YTmsJ;DDPId:a3TL00000006Yil;Deploy:a3SL0000000HPC7&quot;</formula>
        <inlineHelpText>Used by Drawloop Package &quot;Email guidance for short written answer assessments&quot; to automate sending email</inlineHelpText>
        <label>Drawloop_Next_Assessment_Product_Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Effective_Health_Safety_Training__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Copied from the Lead Page for STP Course</description>
        <inlineHelpText>Copied from the Lead Page for STP Course</inlineHelpText>
        <label>Effective Health and Safety Training</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Electrical_Safety__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Copied from the Lead Page for STP Course</description>
        <inlineHelpText>Copied from the Lead Page for STP Course</inlineHelpText>
        <label>Electrical Safety</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Environmental_Management__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Copied from the Lead Page for STP Course</description>
        <inlineHelpText>Copied from the Lead Page for STP Course</inlineHelpText>
        <label>Environmental Management</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Event_Start_Date__c</fullName>
        <description>Copied from Lead - Start date of the event the user wishes to book</description>
        <inlineHelpText>Copied from Lead - Start date of the event the user wishes to book</inlineHelpText>
        <label>Event Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event_Title__c</fullName>
        <description>Copied to Lead - Title of the event the user wishes to book</description>
        <inlineHelpText>Copied to Lead - Title of the event the user wishes to book</inlineHelpText>
        <label>Event Title</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Event_Venue__c</fullName>
        <description>Copied from Lead - Venue of the event the user wishes to book</description>
        <inlineHelpText>Copied from Lead - Venue of the event the user wishes to book</inlineHelpText>
        <label>Event Venue</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Events_Team_To_Admin_Booking__c</fullName>
        <description>Counts the number of products on this opportunity which requere the events team to administer the booking used in workflow Notifiy Events Team Opportunity At Customer Approved</description>
        <inlineHelpText>Counts the number of special event products on this opporunity, used in workflow Notifiy Events Team Opportunity At Customer Approved</inlineHelpText>
        <label>Events Team To Admin Booking</label>
        <summaryFilterItems>
            <field>OpportunityLineItem.Events_Team_To_Admin_Booking__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Exclude_from_Auto_Invoicing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Exclude this Opportunity from being processed using Auto Invoicing</description>
        <label>Exclude from Auto Invoicing</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>